--- a/air-pdl1/public/index.html
+++ b/air-pdl1/public/index.html
@@ -4,37 +4,58 @@
     <!-- Il est obligatoire de préciser un encodage de caractères et un titre pour la page -->
     <meta charset="utf-8">
     <title>Hyblab 2016</title>
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="css/swiper.min.css">
 		<!-- Basic viewport setting for mobile friendly page -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Déclaration de la feuille de style du document-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slider.css">
+    <!-- Initialize Swiper -->
+    <script src="js/swiper.min.js"></script>
 		<!-- Those polyfills are required so that old browsers support fetch mecanism -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.min.js" defer ></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.1/fetch.min.js" defer></script>
 		<!-- Simple sample script that loads data from a dummy json file -->
-		<script src="js/example.js" defer></script>
+    <script src="js/example.js" defer></script>
+    <script src="js/slider.js"></script>
   </head>
   <body>
     <!-- Ce conteneur est la seule balise div que l'on s'autorise pour effectuer la mise en page du site -->
     <!-- On pourrait bien sûr en ajouter d'autres pour se faciliter la mise en page -->
     <!-- Mais on va s'efforce de respecter et brouiller le moins possible la structure logique du contenu -->
-    <div id="container">
+    <div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div id="slider1"class="swiper-slide">
+            <video id = "video1" class="slider-video" width="100%" preload="auto" onended="finVideo1()" autoplay="" >
+              <source src="vid/animation1.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div id="slider2"class="swiper-slide">
+          <video id = "video2" class="slider-video" width="100%" preload="auto" onclick="clickVideo2()" >
+            <source src="vid/animation2.mp4" type="video/mp4">
+          </video>
 
-    <!-- l'entête de la page: titre, barre de recherche -->
-    <header>
-			<img src="img/logo_mankpadair.png" alt="logo hyblab"/>
-      <h1>Hyblab Datajournalism 2019</h1>
-    </header>
+          <video id = "video3" class="slider-video" width="100%" preload="auto">
+            <source src="vid/animation3.mp4" type="video/mp4">
+          </video>
+        </div>
 
-    <!-- Le contenu du site -->
-    <p>Replace this content by your web app !</p>
+      <div id="slider3" class="swiper-slide">
+        Quelle répartition en fonction des saisons ?
+      </div>
 
-		<p>Here is some data from a json file : <span id="data"></span><p>
+        <img src="img/" alt="">
+  </div>
+  <!-- Add Pagination -->
+  <div class="swiper-pagination"></div>
+  <!-- Add Arrows -->
+  <div id="down" class="swiper-button-next"></div>
+  <div id="up"class="swiper-button-prev"></div>
+</div>
 
-    <!-- Notre pied de page -->
-    <footer>
-      <p>Copyright Hyblab team 2019</p>
-    </footer>
-    </div>
+  <script>
+    Slider();
+  </script>
   </body>
 </html>
